<resources>
    <string name="app_name">kasirPAS</string>
    <string name="gambar_makanan">Gambar Makanan</string>
    <string name="nasi_goreng">nasi goreng</string>
    <string name="rating_icon">Rating Icon</string>
    <string name="rating_value">(4.0)</string>
    <string name="harga">Rp15.000</string>
    <string name="pilihan">Pilihan</string>
    <string name="pedas">Pedas</string>
    <string name="porsi">Porsi</string>
    <string name="sedang">Sedang</string>
    <string name="keranjang">Keranjang</string>
    <string name="tambahkan">+ Tambahkan</string>

    <!-- Activity Keranjang -->
    <string name="action_kembali">Kembali</string>
    <string name="title_keranjang">Keranjang</string>
    <string name="desc_gambar_item">Gambar item</string>
    <string name="label_makanan">Makanan</string>
    <string name="desc_item_keranjang">Pedas | Sedang</string>
    <string name="harga_item_keranjang">Rp15.000</string>
    <string name="action_kurangi_jumlah">Kurangi jumlah</string>
    <string name="jumlah_item">2</string>
    <string name="action_tambah_jumlah">Tambah jumlah</string>
    <string name="label_total">Total</string>
    <string name="harga_total">Rp30.000</string>
    <string name="action_pesan">Pesan</string>

    <!-- Activity Pesanan -->
    <string name="title_pesanan">Pesanan</string>
    <string name="label_bayar_sekarang">Bayar Sekarang</string>

    <!-- Activity Pembayaran -->
    <string name="title_metode_pembayaran">Metode Pembayaran</string>
    <string name="label_pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="desc_ikon_tunai">Ikon bayar tunai</string>
    <string name="label_bayar_tunai">Bayar Tunai (Cash)</string>
    <string name="desc_ikon_transfer">Ikon transfer bank</string>
    <string name="label_transfer_bank">Transfer Bank</string>
    <string name="label_nomor_rekening">Nomor Rekening:</string>
    <string name="nomor_rekening_toko">BCA 1234567890 a.n. Toko Makmur</string>
    <string name="info_transfer">Silakan transfer sesuai total dan kirim bukti pembayaran.</string>
    <string name="label_konfirmasi_pembayaran">Konfirmasi Pembayaran</string>

    <!-- Activity Konfirmasi Pembayaran -->
    <string name="title_detail_transaksi">Detail Transaksi</string>
    <string name="tanggal_transaksi_dummy">25 Februari 2025 20:38</string>
    <string name="status_transaksi_berhasil">Transaksi Berhasil</string>
    <string name="nama_barang_dummy">Beras</string>
    <string name="order_id_dummy">Order ID: 91036</string>
    <string name="total_pembayaran_dummy">Total Pembayaran: Rp30.000</string>
    <string name="metode_pembayaran_dummy">Metode Pembayaran: Cash</string>
    <string name="label_berhasil_menyimpan">Berhasil Menyimpan</string>
    <string name="action_selesai">Selesai</string>

    <!-- HomeActivity Strings -->
    <string name="default_user_name">Pengguna</string>
    <string name="toast_navigating_beranda">Berpindah ke Halaman Beranda (Katalog Produk)</string>
    <string name="toast_quick_add">Aksi Tambah Cepat (Quick Add)</string>
    <string name="toast_navigating_laporan">Navigasi ke Laporan/Grafik</string>
    <string name="toast_navigating_pesanan">Navigasi ke Pesanan/Order</string>
    <string name="toast_navigating_profil">Navigasi ke Profil</string>
    <string name="restaurant_name_src">Toko SRC</string>
    <string name="search_query_prefix">Mencari: %1$s</string>

    <!-- Splash Screen Strings -->
    <string name="brand_name">LuxePOS</string>
    <string name="tagline">PREMIUM RETAIL SYSTEMS</string>
    <string name="initializing">INITIALIZING ENVIRONMENT</string>

    <!-- Login Activity Strings -->
    <string name="welcome_back">Welcome Back</string>
    <string name="signin_details">Please enter your details to sign in</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or_continue_with">or continue with</string>
    <string name="google">Google</string>
    <string name="biometric">Biometric</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="pci_compliant">PCI COMPLIANT</string>
    <string name="aes_256">AES-256</string>

    <!-- Onboarding Strings -->
    <string name="skip">Lewati</string>
    <string name="next">Lanjut</string>
    <string name="start_now">Mulai Sekarang</string>

    <string name="onboarding_title_1">Kasir Cepat &amp; Pintar</string>
    <string name="onboarding_desc_1">Ucapkan selamat tinggal pada antrean panjang! Kelola setiap transaksi dengan mulus dalam satu sentuhan.</string>

    <string name="onboarding_title_2">Kendali Stok Penuh</string>
    <string name="onboarding_desc_2">Tak ada lagi stok yang terlewat. Pantau inventaris secara real-time dan selalu siap penuhi kebutuhan pelanggan.</string>

    <string name="onboarding_title_3">Tumbuh Bersama Data</string>
    <string name="onboarding_desc_3">Pantau perkembangan bisnis dengan analitik cerdas. Ambil keputusan terbaik untuk melesatkan omset harianmu!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
</resources>
